[package]
name = "degen-websockets"
description ="Yet Another WebSocket Server"
repository="https://github.com/ethereumdegen/degen-websockets"
license = "MIT"
version = "0.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.28.1", features = ["rt", "rt-multi-thread", "macros", "io-std","io-util","sync","time"] }
tokio-tungstenite = "0.19.0"

futures-util = { version = "0.3.25", default-features = false, features = ["std"] }
futures = "0.3.28"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0.96"
crossbeam-channel = "0.5.8"
url = "2.4.0"
thiserror = "1.0.40"
rand = "0.8.5"

[dependencies.uuid]
version = "1.3.3"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
